k8s/apps/glpi/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: glpi
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
