k8s/apps/glpi/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi
  namespace: glpi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: glpi.atlas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glpi
                port:
                  number: 80
